--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
     "polymer": "Polymer/polymer#^2.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
-    "Credit-evaluator": "AnuarHarb/Credit-evaluator"
+    "Credit-evaluator": "AnuarHarb/Credit-evaluator",
+    "paper-card": "PolymerElements/paper-card#^2.0.0"
   },
   "resolutions": {
     "polymer": "^2.0.0"
